ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* README R5: boundary-call counts, counted in the CORE (zero unless the core is a counting build). */
struct AkCounters {
  uint64_t forward;
  uint64_t reverse;
  uint64_t transcode;
  uint64_t prefix_moves;
  uint64_t prefix_bytes;
  uint64_t grows;
};
typedef struct AkCounters AkCounters;
/* UTF-8, no validation. */
ak_transcode_fn ak_tc_utf8_trusted(void);
/* UTF-8, SIMD validator. */
ak_transcode_fn ak_tc_utf8_simd(void);
/* bytes: a copy. */
ak_transcode_fn ak_tc_bytes(void);
/* UTF-16 code units -> UTF-8. */
ak_transcode_fn ak_tc_utf16(void);
/* Latin-1 bytes -> UTF-8. */
ak_transcode_fn ak_tc_latin1(void);
/* counters */
void ak_enc_counters(const ak_enc_ctx *ctx, struct AkCounters *out);
/* Counting build: the HOST reports a reverse crossing the core cannot see. */
void ak_enc_count_reverse(ak_enc_ctx *ctx);
void ak_enc_counters_reset(ak_enc_ctx *ctx);
void ak_dec_counters(const ak_dec_ctx *ctx, struct AkCounters *out);
void ak_dec_counters_reset(ak_dec_ctx *ctx);
size_t ak_enc_site_moves(const ak_enc_ctx *ctx, uint32_t *out, size_t cap);
/* noop */
/* A crossing and nothing else. */
uint64_t ak_noop(uint64_t x);
/* An identical twin of ak_noop. */
uint64_t ak_noop2(uint64_t x);
/* ak_noop with the init guard. */
uint64_t ak_noop_guarded(uint64_t x);
/* One forward and one reverse crossing. */
uint64_t ak_noop_reverse(uint64_t (*f)(uint64_t), uint64_t x);
/* pull */
int32_t ak_bdr_reserve(ak_dec_ctx *ctx, size_t bytes);