ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

    internal static IntPtr ak_tc_utf8_trusted() { System.Threading.Interlocked.Increment(ref N_ak_tc_utf8_trusted); return ak_tc_utf8_trusted__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_utf8_trusted();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_utf8_trusted();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_utf8_simd", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_utf8_simd__raw();
    internal static long N_ak_tc_utf8_simd;
    internal static IntPtr ak_tc_utf8_simd() { System.Threading.Interlocked.Increment(ref N_ak_tc_utf8_simd); return ak_tc_utf8_simd__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_utf8_simd();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_utf8_simd();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_bytes__raw();
    internal static long N_ak_tc_bytes;
    internal static IntPtr ak_tc_bytes() { System.Threading.Interlocked.Increment(ref N_ak_tc_bytes); return ak_tc_bytes__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_bytes();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_bytes();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_utf16", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_utf16__raw();
    internal static long N_ak_tc_utf16;
    internal static IntPtr ak_tc_utf16() { System.Threading.Interlocked.Increment(ref N_ak_tc_utf16); return ak_tc_utf16__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_utf16();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_utf16();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_tc_latin1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_tc_latin1__raw();
    internal static long N_ak_tc_latin1;
    internal static IntPtr ak_tc_latin1() { System.Threading.Interlocked.Increment(ref N_ak_tc_latin1); return ak_tc_latin1__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_tc_latin1();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_tc_latin1();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_counters", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_enc_counters__raw(IntPtr ctx, AkCounters* @out);
    internal static long N_ak_enc_counters;
    internal static void ak_enc_counters(IntPtr ctx, AkCounters* @out) { System.Threading.Interlocked.Increment(ref N_ak_enc_counters); ak_enc_counters__raw(ctx, @out); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_enc_counters(IntPtr ctx, AkCounters* @out);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_enc_counters(IntPtr ctx, AkCounters* @out);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_count_reverse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_enc_count_reverse__raw(IntPtr ctx);
    internal static long N_ak_enc_count_reverse;
    internal static void ak_enc_count_reverse(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_enc_count_reverse); ak_enc_count_reverse__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_enc_count_reverse(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_enc_count_reverse(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_counters_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_enc_counters_reset__raw(IntPtr ctx);
    internal static long N_ak_enc_counters_reset;
    internal static void ak_enc_counters_reset(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_enc_counters_reset); ak_enc_counters_reset__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_enc_counters_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_enc_counters_reset(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_counters", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_dec_counters__raw(IntPtr ctx, AkCounters* @out);
    internal static long N_ak_dec_counters;
    internal static void ak_dec_counters(IntPtr ctx, AkCounters* @out) { System.Threading.Interlocked.Increment(ref N_ak_dec_counters); ak_dec_counters__raw(ctx, @out); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_dec_counters(IntPtr ctx, AkCounters* @out);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_dec_counters(IntPtr ctx, AkCounters* @out);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_counters_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern void ak_dec_counters_reset__raw(IntPtr ctx);
    internal static long N_ak_dec_counters_reset;
    internal static void ak_dec_counters_reset(IntPtr ctx) { System.Threading.Interlocked.Increment(ref N_ak_dec_counters_reset); ak_dec_counters_reset__raw(ctx); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_dec_counters_reset(IntPtr ctx);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_dec_counters_reset(IntPtr ctx);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_enc_site_moves", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nuint ak_enc_site_moves__raw(IntPtr ctx, uint* @out, nuint cap);
    internal static long N_ak_enc_site_moves;
    internal static nuint ak_enc_site_moves(IntPtr ctx, uint* @out, nuint cap) { System.Threading.Interlocked.Increment(ref N_ak_enc_site_moves); return ak_enc_site_moves__raw(ctx, @out, cap); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nuint ak_enc_site_moves(IntPtr ctx, uint* @out, nuint cap);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nuint ak_enc_site_moves(IntPtr ctx, uint* @out, nuint cap);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_noop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern ulong ak_noop__raw(ulong x);
    internal static long N_ak_noop;
    internal static ulong ak_noop(ulong x) { System.Threading.Interlocked.Increment(ref N_ak_noop); return ak_noop__raw(x); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong ak_noop(ulong x);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern ulong ak_noop(ulong x);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_noop2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern ulong ak_noop2__raw(ulong x);
    internal static long N_ak_noop2;
    internal static ulong ak_noop2(ulong x) { System.Threading.Interlocked.Increment(ref N_ak_noop2); return ak_noop2__raw(x); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong ak_noop2(ulong x);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern ulong ak_noop2(ulong x);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_noop_guarded", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern ulong ak_noop_guarded__raw(ulong x);
    internal static long N_ak_noop_guarded;
    internal static ulong ak_noop_guarded(ulong x) { System.Threading.Interlocked.Increment(ref N_ak_noop_guarded); return ak_noop_guarded__raw(x); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong ak_noop_guarded(ulong x);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern ulong ak_noop_guarded(ulong x);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_noop_reverse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern ulong ak_noop_reverse__raw(delegate* unmanaged[Cdecl]<ulong, ulong> f, ulong x);
    internal static long N_ak_noop_reverse;
    internal static ulong ak_noop_reverse(delegate* unmanaged[Cdecl]<ulong, ulong> f, ulong x) { System.Threading.Interlocked.Increment(ref N_ak_noop_reverse); return ak_noop_reverse__raw(f, x); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial ulong ak_noop_reverse(delegate* unmanaged[Cdecl]<ulong, ulong> f, ulong x);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern ulong ak_noop_reverse(delegate* unmanaged[Cdecl]<ulong, ulong> f, ulong x);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_bdr_reserve", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_bdr_reserve__raw(IntPtr ctx, nuint bytes);
    internal static long N_ak_bdr_reserve;
    internal static int ak_bdr_reserve(IntPtr ctx, nuint bytes) { System.Threading.Interlocked.Increment(ref N_ak_bdr_reserve); return ak_bdr_reserve__raw(ctx, bytes); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_bdr_reserve(IntPtr ctx, nuint bytes);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_bdr_reserve(IntPtr ctx, nuint bytes);
